--- a/nginx.conf
+++ b/nginx.conf
@@ -3,16 +3,20 @@ server {
 
         location / {
             proxy_pass http://hyperion:3006;
+            proxy_set_header Host $host;
         }
         location /api {
             proxy_pass http://api:3001;
+            proxy_set_header Host $host;
         }
         location /auth {
             proxy_pass http://api:3001;
+            proxy_set_header Host $host;
         }
         location /websocket {
             proxy_pass http://api:3001;
             proxy_http_version 1.1;
+            proxy_set_header Host $host;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
         }
